--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: update apt
       run: sudo apt-get update
-    - name: remove curl
-      run: sudo apt-get remove curl
     - name: Copy ENV Laravel Configuration for CI
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies (PHP vendors)
@@ -20,16 +18,22 @@ jobs:
       run: php artisan key:generate
     - name: install lib-ssh
       run: sudo apt install libssh2-1-dev libssl-dev
+    - name: wget libssh
+      run: https://github.com/libssh2/libssh2/releases/download/libssh2-1.9.0/libssh2-1.9.0.tar.gz
+    - name: extract libssh
+      run: tar -xf libssh2-1.9.0.tar.gz
+    - name: configure libssh
+      run: ./libssh2-1.9.0/configure
+    - name: make libssh
+      run: cd ./libssh2-1.9.0 && make && sudo make install && cd ..
     - name: wget curl
       run: wget https://curl.haxx.se/download/curl-7.66.0.tar.gz
     - name: extract curl
       run: tar -xf curl-7.66.0.tar.gz
     - name: configure
-      run: ./curl-7.66.0/configure --with-ssl --with-libssh2
+      run: ./curl-7.66.0/configure --with-ssl --with-libssh2=/usr/local --disable-shared
     - name: make
       run: cd ./curl-7.66.0 && make && sudo make install && cd ..
-    - name: find curl
-      run: ldd /usr/local/bin/curl | grep libcurl
     - name: update curl path
       run: export PATH=/usr/local/bin/curl:$PATH
     - name: check curl
