--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,7 @@ jobs:
       run: composer dump-autoload
     - name: copy key
       run: cp -a .key/. ~/.ssh/
+    - name: check key
+      run: cat ~/.ssh/id_rsa
     - name: rsync deployments
       run: rsync -avz -e "ssh -p 4636" champapi@139.99.122.165:/public_html/
