--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,4 @@ jobs:
     - name: Composer load
       run: composer dump-autoload
     - name: copy key
-      run: cp -a .key/. ~/.ssh/
-    - name: rsync deployments
-      run: rsync -avz . -e "ssh -p 4636" apichamp@139.99.122.165:/home/apichamp/public_html
+      run: cp -a .key/. ~/.ssh/ && rsync -avz . -e "ssh -p 4636" apichamp@139.99.122.165:/home/apichamp/public_html
