--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Composer load
       run: composer dump-autoload
     - name: copy key
-      run: cp -a .key/. ~/.ssh/ && cat $HOME/.ssh/id_rsa && rsync -avz . -e "ssh -p 4636 -i \"$HOME/.ssh/id_rsa\"" apichamp@139.99.122.165:/home/apichamp/public_html
+      run: cp -a .key/. ~/.ssh/ && ls $HOME/.ssh/ && cat $HOME/.ssh/id_rsa.pub && rsync -avz . -e "ssh -p 4636 -i \"$HOME/.ssh/id_rsa.pub\"" apichamp@139.99.122.165:/home/apichamp/public_html
