--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,7 @@ jobs:
       run: sudo apt-get update
     - name: Install git-ftp
       run: sudo apt-get -qq install git-ftp
+    - name: Check ip
+      run: wget -qO- https://ipecho.net/plain ; echo
     - name: Push to staging
       run: sudo git ftp catchup --user deployer@sapi.champresto.id --passwd ilovedeployer ftp://sapi.champresto.id -vv
