--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,26 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "bogardo/mailgun": "^5.0",
+        "php": "^7.1.3",
+        "bogardo/mailgun": "^5.1",
         "brozot/laravel-fcm": "^1.2",
-        "doctrine/dbal": "^2.5.13",
-        "fideloper/proxy": "~3.3",
-        "intervention/image": "^2.4",
-        "laravel/framework": "5.5.*",
-        "laravel/passport": "^4.0",
-        "laravel/tinker": "~1.0",
+        "doctrine/dbal": "^2.9",
+        "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
+        "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.4",
+        "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "maatwebsite/excel": "^2.1",
-        "mpociot/laravel-apidoc-generator": "^2.0",
-        "nwidart/laravel-modules": "^2.6",
-        "orangehill/iseed": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "mpociot/laravel-apidoc-generator": "^3.12",
+        "nwidart/laravel-modules": "^5.0",
+        "orangehill/iseed": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
-        "smartins/passport-multiauth": "3.0"
+        "smartins/passport-multiauth": "^4.1",
+        "spatie/laravel-backup": "^6.7"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
@@ -44,6 +46,8 @@
             "Tests\\": "tests/"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "laravel": {
             "dont-discover": [
