--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
+        "reliese/laravel": "^0.0.13",
         "xethron/migrations-generator": "^2.0"
     },
     "autoload": {
