--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "orangehill/iseed": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
         "smartins/passport-multiauth": "^4.1",
-        "spatie/laravel-backup": "^6.7"
+        "spatie/laravel-backup": "^6.7",
+        "laravel/slack-notification-channel": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
