--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+	"barryvdh/laravel-cors": "^0.11.3",
         "bogardo/mailgun": "^5.1",
         "brozot/laravel-fcm": "^1.2",
         "doctrine/dbal": "^2.9",
