--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-	"barryvdh/laravel-cors": "^0.11.3",
         "bogardo/mailgun": "^5.1",
         "brozot/laravel-fcm": "^1.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+	"fruitcake/laravel-cors": "^1.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.4",
