--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,16 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "arcanedev/log-viewer": "~4.7.0",
         "bogardo/mailgun": "^5.1",
         "brozot/laravel-fcm": "^1.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-	"fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "^1.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.4",
+        "laravel/slack-notification-channel": "^2.0",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
@@ -22,8 +24,7 @@
         "orangehill/iseed": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
         "smartins/passport-multiauth": "^4.1",
-        "spatie/laravel-backup": "^6.7",
-        "laravel/slack-notification-channel": "^2.0"
+        "spatie/laravel-backup": "^6.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
