Update Storage System
- Add vendor Ali Cloud
- Add Vendor Google Cloud
- Change env S3 to STORAGE

--- a/.env.example
+++ b/.env.example
@@ -81,5 +81,7 @@ S3_SECRET_ACCESS_KEY=
 S3_DEFAULT_REGION=
 S3_BUCKET_API=
 S3_BUCKET_VIEW=
-S3_URL_API=
-S3_URL_VIEW=
+
+STORAGE=gcs
+STORAGE_URL_API = https://storage.googleapis.com/production-jj-customer-api/
+STORAGE_URL_VIEW = https://storage.googleapis.com/production-jj-customer-view/
