--- a/.env.example
+++ b/.env.example
@@ -76,12 +76,30 @@ BASE_MIDTRANS_PRO=
 
 SMS_KEY=
 
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-S3_DEFAULT_REGION=
-S3_BUCKET_API=
-S3_BUCKET_VIEW=
-
 STORAGE=gcs
 STORAGE_URL_API = https://storage.googleapis.com/production-jj-customer-api/
 STORAGE_URL_VIEW = https://storage.googleapis.com/production-jj-customer-view/
+
+# S3_ACCESS_KEY_ID =
+# S3_SECRET_ACCESS_KEY =
+# S3_DEFAULT_REGION =
+# S3_BUCKET_API =
+# S3_BUCKET_VIEW =
+# S3_URL_API =
+# S3_URL_VIEW =
+
+# ALI_ACCESS_ID = 
+# ALI_ACCESS_KEY = 
+# ALI_BUCKET_API = 
+# ALI_BUCKET_VIEW = 
+# ALI_ENDPOINT = 
+# ALI_URL_API = 
+# ALI_URL_VIEW = 
+
+GOOGLE_CLOUD_PROJECT_ID = 
+GOOGLE_CLOUD_KEY_FILE = #simpan file json di folder /public/namajson.json
+GOOGLE_CLOUD_STORAGE_BUCKET_API = 
+GOOGLE_CLOUD_STORAGE_BUCKET_VIEW = 
+GOOGLE_CLOUD_STORAGE_PATH_PREFIX = 
+GOOGLE_CLOUD_STORAGE_API_URI = 
+GOOGLE_CLOUD_STORAGE_VIEW_URI = 
