--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "aliyuncs/oss-sdk-php": "~2.0",
         "arcanedev/log-viewer": "~4.7.0",
         "bogardo/mailgun": "^5.1",
         "brozot/laravel-fcm": "^1.2",
@@ -13,7 +14,6 @@
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
         "intervention/image": "^2.5",
-        "aliyuncs/oss-sdk-php": "~2.0",
         "jacobcyl/ali-oss-storage": "2.1",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.4",
@@ -27,6 +27,7 @@
         "php-http/guzzle6-adapter": "^1.1",
         "smartins/passport-multiauth": "^4.1",
         "spatie/laravel-backup": "^6.7",
+        "stephenlake/php-google-holidays": "^1.0",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
