--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "smartins/passport-multiauth": "^4.1",
         "spatie/laravel-backup": "^6.7",
         "stephenlake/php-google-holidays": "^1.0",
-        "superbalist/laravel-google-cloud-storage": "^2.2"
+        "superbalist/laravel-google-cloud-storage": "^2.2",
+        "timehunter/laravel-google-recaptcha-v3": "^2.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
